# Basic

./: LICENSE
HelloWorld/: mainwindow.ui
HelloWorldConsole/: CMakeLists.txt  main.cpp
HelloWorldWidgetCode/: CMakeLists.txt  main.cpp
